# matlab-whole-body-simulator

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  init.m  initFcn.m  issueExample.m  loadTimeSeries.m  postLoadFcn.m  test.mdl  test_matlab_system.mdl  test_matlab_system_19.mdl  test_matlab_system_2019b.mdl  test_matlab_system_2020a.mdl  test_matlab_system_2020b.mdl
+src/: initVisualizer.m
app/tools/: matlab-online-installer.m  matlabOnlineInstaller.m
doc/: getting-whole-body-controllers.md  source-installation-using-the-full-superbuild-installation-from-source.md  source-installation-using-the-robotology-conda-packages.md
lib/: mwbs_lib.slx  mwbs_robotClosedChainDynamicsWithContacts_lib.slx  mwbs_robotDynamicsWithContacts_lib.slx  mwbs_robotSensors_lib.slx  mwbs_visualizers_lib.slx  robotDynamicsWithContacts_lib.slx  slblocks.m
lib/+iDynTree2WBTmappers/: KinDynComputations.m  loadReducedModel.m
lib/+mwbs/: getModelPathFromFileNameAndYarpFinder.m
lib/+wbs/: getModelInfoFromRobotCfgAndYarpFinder.m  getModelPathFromFileNameAndYarpFinder.m
lib/RobotDynamicsWithContacts/: initRobotDynamicsWithContactsCB.m  loadRobotDynamicsWithContactsCB.m  robotDynamicsWithContacts_lib.slx  robotDynamicsWithContacts_lib_2020.slx  slblocks.m
src/: step_block.m
src/Classes/: Contacts.m  Robot.m  State.m
src/contactDyn/: Contacts.m  compute_contact_wrench_in_sole_frames.m  compute_free_acceleration.m  compute_unilateral_linear_contact.m
src/forwardDyn/: forward_and_contact_dynamics.m  forward_dynamics.m
src/robot/: Forward_and_contact_block.m  Robot.m  State.m
src/robotVisualizer/: Visualizer.m  initVisualizer.m
src/tools/: H2Rp.m  Rp2H.m  Rp2Hom.m  exponential_map.m  (+2 more)
test/: test_class.m
(+99 files in other folders)
